# VideoTools

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: convert.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: LogOutput.tsx
src/lib/: dialog.ts  process.tsx  runner.ts  store.ts
src/tabs/: Converter.tsx  Downloader.tsx  Settings.tsx
